--- a/tools/static-analysis/gradle/staticAnalysis.gradle
+++ b/tools/static-analysis/gradle/staticAnalysis.gradle
@@ -14,7 +14,7 @@ dependencies {
 
 //    cpd 'de.aaschmid:gradle-cpd-plugin:1.0'
 
-    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.0.0.RC7-3'
+    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.0.0.RC9.2'
 }
 gradle.projectsEvaluated {
     task staticAnalysis {
