[MOB-16085] -- Небольшие правки

--- a/tools/geminio/templates/BaseFragment/recipe.yaml
+++ b/tools/geminio/templates/BaseFragment/recipe.yaml
@@ -34,7 +34,7 @@ widgets:
         - nonempty
         - unique
       default: fragment_blank
-      suggest: fragment_${className.classToResource()}
+      suggest: ${className.fragmentToLayout()}
 
   - booleanParameter:
       id: includeFactory
